--- a/frontend/src/app/map-sidebar/map-sidebar.component.html
+++ b/frontend/src/app/map-sidebar/map-sidebar.component.html
@@ -1,12 +1,12 @@
 <div appChangeMapSidebar id="mapsidebar" style="overflow: auto; height: 467px; width: 520px;border-style: groove">
   <p style="color:black; margin-bottom: 7px; margin-left: 7px;font-size: 25px;font-family: Arial">{{ this.title }}</p>
 <!--  {{this.displayHotelsInfo.length}}-->
-  <div *ngIf="this.displayHotelsInfo.length != 0 || this.displayHotelsInfo[0] != undefined; else notFound">
-    <p *ngIf="!init" style="margin-left: 7px; margin-top: 7px">There are {{this.displayHotelsInfo.length}} recommendations.</p>
+  <div *ngIf="this.displayHotelsInfo[0] != undefined || this.displayHotelsInfo.length != 0; else notFound">
+    <p *ngIf="!init" style="margin-left: 7px; margin-top: 7px">There is(are) {{this.displayHotelsInfo.length}} recommendation(s).</p>
     <ul *ngFor="let displayHotel of this.displayHotelsInfo" style="margin-left: 7px;margin-right: 7px">
       <li>
-        <div (click)="this.onToggle(displayHotel)" class="card bg-light mb-3" style="cursor: pointer;margin-bottom: 7px">
-          <div class="card-body">
+        <div  class="card bg-light mb-3" style="cursor: pointer;margin-bottom: 7px;">
+          <div class="card-body" (click)="this.onToggle(displayHotel)" [ngStyle]="{'background-color': this.displayHotel.bgColor, 'color': this.displayHotel.fontColor}">
             <!--          <a href="/homepage"><h5 class="card-title" style="color: black">-->
             {{ displayHotel.name }}
             &nbsp; <p class="fa fa-map-marker" aria-hidden="true"></p>
