--- a/frontend/src/app/search-result/search-result.component.html
+++ b/frontend/src/app/search-result/search-result.component.html
@@ -1,3 +1,39 @@
 <app-top-navigation></app-top-navigation>
-{{message}}
+<div *ngFor="let res of result">
+  <p>{{res.img_url[0].url}}</p>
+<article class="room_list">
+  <div class="row">
+    <div class="col-lg-4 col-md-5 col-sm-12">
+      <figure>
+        <div *ngFor="let img of res.img_url" class="room_list_slider owl-carousel">
+          <p>{{img}}</p>
+<!--          <div class="item">-->
+<!--            <a href="room.html" class="hover_effect h_link h_blue"><img src = {{img.url}} alt="Image"></a>-->
+<!--          </div>-->
+        </div>
+      </figure>
+    </div>
+    <div class="col-lg-8 col-md-7 col-sm-12">
+      <div class="room_details">
+        <div class="col-md-9 col-sm-9 col-xs-12 room_desc">
+          <h3><a href="room.html"> {{res.name}} </a></h3>
+          <p>{{res.description}}</p>
+          <div class="room_services">
+            <i class="fa fa-coffee" data-toggle="popover" data-placement="top" data-trigger="hover" data-content="Breakfast Included" data-original-title="Breakfast"></i>
+            <i class="fa fa-cutlery" data-toggle="popover" data-placement="top" data-trigger="hover" data-content="Restaurant" data-original-title="Zante Restaurant"></i>
+            <i class="fa fa-television" data-toggle="popover" data-placement="top" data-trigger="hover" data-content="Plasma TV with cable Channel" data-original-title="Plasma TV"></i>
+          </div>
+        </div>
+        <div class="col-md-3 col-sm-3 col-xs-12 room_price">
+          <div class="room_price_inner">
+            <span class="room_price_number"> €129,00  </span>
+            <small class="upper"> per night </small>
+            <a href="room.html" class="button  btn_blue btn_full upper">Book Now</a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</article>
+</div>
 
