--- a/frontend/src/app/homepage/homepage.component.html
+++ b/frontend/src/app/homepage/homepage.component.html
@@ -16,21 +16,14 @@
     <nav id="main_menu" class="mobile_menu navbar-collapse">
       <ul class="nav navbar-nav">
         <li class="mobile_menu_title" style="display:none;">MENU</li>
-        <li class="dropdown simple_menu active">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown">Become a host<b class="caret"></b></a>
-          <ul class="dropdown-menu">
-            <li><a href="index4.html">Individual</a></li>
-            <li><a href="boxed.html">Enterprise</a></li>
-          </ul>
+        <li class="menu_button">
+          <a href="/chat" class="button  btn_yellow"><i class="fa fa-calendar"></i>Booking with Chatbot</a>
         </li>
         <li>
           <a href="/map">Itinerary planner</a>
         </li>
         <li id="loginStatus"><a href="/login">Log in</a></li>
         <li><a href="/signup" id="singup_status">Sign up</a></li>
-        <li class="menu_button">
-          <a href="/chat" class="button  btn_yellow"><i class="fa fa-calendar"></i>Booking with Chatbot</a>
-        </li>
         <li id="other" style="display: none"></li>
       </ul>
     </nav>
@@ -158,7 +151,7 @@
            data-responsive_offset="on"
            data-fontsize="['20','20','20','15']"
            data-lineheight="['30','30','30','25']"
-           data-frames='[{"delay":2400,"speed":1500,"frame":"0","from":"y:[100%];z:0;rX:0deg;rY:0;rZ:0;sX:1;sY:1;skX:0;skY:0;opacity:0;","mask":"x:0px;y:[100%];s:inherit;e:inherit;","to":"o:1;","ease":"Power2.easeInOut"}]'><i class="fa fa-check-square-o"></i> Family Room from $89 per night
+           data-frames='[{"delay":2400,"speed":1500,"frame":"0","from":"y:[100%];z:0;rX:0deg;rY:0;rZ:0;sX:1;sY:1;skX:0;skY:0;opacity:0;","mask":"x:0px;y:[100%];s:inherit;e:inherit;","to":"o:1;","ease":"Power2.easeInOut"}]'><i class="fa fa-check-square-o"></i> Experience Sydney CBD life
       </div>
       <!-- LAYER NR. 14 -->
       <div class="tp-caption"
