login error handling done

--- a/frontend/src/app/top-navigation/top-navigation.component.html
+++ b/frontend/src/app/top-navigation/top-navigation.component.html
@@ -19,7 +19,7 @@
         <li>
           <a href="/map">Itinerary planner</a>
         </li>
-        <li id="loginStatus"><a href="/login">log in</a></li>
+        <li id="loginStatus"><a href="/login">Sign in</a></li>
         <li><a href="/signup" id="singup_status">sign up</a></li>
 
         <li id="other" style="display: none"> </li>
