--- a/frontend/src/app/homepage/homepage.component.html
+++ b/frontend/src/app/homepage/homepage.component.html
@@ -22,7 +22,7 @@
         <li>
           <a href="/map">Itinerary planner</a>
         </li>
-        <li id="loginStatus"><a href="/login">Log in</a></li>
+        <li id="loginStatus"><a href="/login">Sign in</a></li>
         <li><a href="/signup" id="singup_status">Sign up</a></li>
         <li id="other" style="display: none"></li>
       </ul>
