--- a/frontend/src/app/login/login.component.html
+++ b/frontend/src/app/login/login.component.html
@@ -1,31 +1,39 @@
-
 <app-top-navigation></app-top-navigation>
-<br>
-<div style="margin-right: 37%;margin-left: 37%" class="vbf">
-  <h2 class="form_title"><i class="fa fa-calendar"></i>LOG IN PROFILE</h2>
+<div style="margin-right: 33%;margin-left: 33%; margin-bottom: 33px;margin-top: 33px;" class="vbf" >
+  <h1 class="form_title" style="color: black">Sign in</h1>
     <form (ngSubmit)="onLogInSubmit()" #loginForm="ngForm" class="inner">
+      <div class="alert alert-danger" *ngIf="authFailed"><b>Invalid username (email) or password.</b></div>
       <div class="form-group">
-          <input class="form-control" id="username" type="text" required email
-                 [(ngModel)]="loginInfo.username" name="username" placeholder="Enter your username(email)" #name=ngModel
+        <label style="color: black;font-size: 14px"><b>Username (email)</b></label>
+          <input style="color: black;font-size: 14px" class="form-control" id="username" type="text" required email
+                 [(ngModel)]="loginInfo.username" name="username" #name=ngModel
           >
         <div *ngIf="name.invalid && (name.dirty || name.touched)"
-             class="alert alert-danger">
+             class="alert alert-warning">
           <div *ngIf="name.errors.required">
-            Name is required.
+            Username (email) is required.
           </div>
           <div *ngIf="name.errors.email">
-            please input correct email
+            Username must be in email address format.
           </div>
         </div>
       </div>
       <div class="form-group">
-          <input id="password" type="password" class="form-control" required
-                 [(ngModel)]="loginInfo.password" name="password" placeholder="Enter your password"
-          >
+        <label style="color: black; font-size: 14px"><b>Password</b></label>
+        <input style="color: black;font-size: 14px" id="password" type="password" class="form-control" required
+               [(ngModel)]="loginInfo.password" name="password" #pwd=ngModel
+        >
+        <div *ngIf="pwd.invalid && (pwd.dirty || pwd.touched)"
+           class="alert alert-warning">
+          <div *ngIf="pwd.errors.required">
+            Password is required.
+          </div>
+        </div>
       </div>
-      <button class="button btn_lg btn_blue btn_full" type="submit" [disabled]="!loginForm.form.valid">LOG IN</button>
-      <button class="button btn_lg btn_blue btn_full" (click)="loginForm.reset()">RESET ALL</button>
-      <p>Don't have an account? You can create a new account <a href="/signup">here</a>.</p>
+      <div class="form-group">
+        <button style="display: inline-block" class="button btn_lg btn_yellow" type="submit" [disabled]="!loginForm.form.valid">Sign in</button>
+      </div>
+      <label style="font-size: 14px; margin-top: 24px;color: black">Don't have an account? You can create a new account by clicking <a href="/signup"><b>here</b></a>.</label>
     </form>
-  </div>
+</div>
 
