add booking.com forward api

--- a/frontend/src/app/homepage/homepage.component.html
+++ b/frontend/src/app/homepage/homepage.component.html
@@ -246,4 +246,5 @@
 
   </ul>
 </div>
+<app-booking-com-recommendation></app-booking-com-recommendation>
 <app-scripthack src="../../assets/loginStatus.js" type="text/javascript"></app-scripthack>
