activation page done

--- a/frontend/src/app/activate/activate.component.html
+++ b/frontend/src/app/activate/activate.component.html
@@ -1,4 +1,7 @@
-<h1>Great! You have successfully activated your account!</h1>
-<p>The page will be redirected automatically to the homepage after 2 seconds.</p>
-<p>You can also manually click the link below.</p>
-<a href="http://localhost:4200/homepage">http://localhost:4200/homepage</a>
+<app-top-navigation></app-top-navigation>
+<p style="color: black;font-size: 25px;text-align: center"><b>Hey there!</b></p>
+<p style="color: black;text-align: center; font-size: 25px">Great! You have successfully activated your account!</p>
+<br>
+<div style="text-align: center;margin-bottom: 20px">
+  <button class="button btn_yellow" (click)="goLogin()">I want to sign in!</button>
+</div>
