--- a/frontend/src/app/signup/signup.component.html
+++ b/frontend/src/app/signup/signup.component.html
@@ -109,5 +109,5 @@
   <br>
   <p style="font-size: 17px">Regards,<br>Cocorico Team</p>
   <br>
-  <button style="display: inline-block" class="button btn_yellow" (click)="goLogin()">I want to log in!</button>
+  <button style="display: inline-block" class="button btn_yellow" (click)="goLogin()">I want to sign in!</button>
 </kendo-window>
