--- a/frontend/src/app/homepage/homepage.component.html
+++ b/frontend/src/app/homepage/homepage.component.html
@@ -164,60 +164,13 @@
            data-frames='[{"delay":3000,"speed":1500,"frame":"0","from":"y:[100%];z:0;rX:0deg;rY:0;rZ:0;sX:1;sY:1;skX:0;skY:0;opacity:0;","mask":"x:0px;y:[100%];s:inherit;e:inherit;","to":"o:1;","ease":"Power2.easeInOut"}]'
            style="z-index: 99;">
         <!-- ========== BOOKING FORM ========== -->
-        <div class="vbf">
-          <h2 class="form_title"><i class="fa fa-calendar"></i> Search Accommodation</h2>
+        <div style="width: 80%" class="vbf">
           <form (ngSubmit)="onSearchSubmit()" id="booking-form" class="inner" #searchform="ngForm">
             <div class="form-group">
-              <input class="form-control" name="Destination" placeholder="Enter Your Destination" type="text"
+              <input style="font-size: 17px; font-weight: bold" class="form-control" name="Destination" placeholder="Try 'Sydney'" type="text"
                      [(ngModel)]="this.searchInfo.location">
             </div>
-            <div class="form-group">
-              <div class="form_select">
-                <select name="booking-roomtype" class="form-control" title="Select Room Type" data-header="Room Type"
-                        [(ngModel)]="this.searchInfo.room_type">
-                  <option value="Single Room">Single Room</option>
-                  <option value="Double Room">Double Room</option>
-                  <option value="Deluxe Room">Deluxe Room</option>
-                </select>
-              </div>
-            </div>
-            <div class="form-group col-md-6 col-sm-6 col-xs-12 nopadding">
-              <div class="form_select">
-                <select name="booking-adults" class="form-control md_noborder_right" title="Adults" data-header="Adults">
-                  <option value="0">0</option>
-                  <option value="1">1</option>
-                  <option value="2">2</option>
-                  <option value="3">3</option>
-                  <option value="4">4</option>
-                </select>
-              </div>
-            </div>
-            <div class="form-group col-md-6 col-sm-6 col-xs-12 nopadding">
-              <div class="form_select">
-                <select name="booking-children" class="form-control" title="Children" data-header="Children">
-                  <option value="0">0</option>
-                  <option value="1">1</option>
-                  <option value="2">2</option>
-                  <option value="3">3</option>
-                  <option value="4">4</option>
-                </select>
-              </div>
-            </div>
-            <div class="form-group col-md-6 col-sm-6 col-xs-12 nopadding">
-              <div class="input-group">
-                <div class="form_date">
-                  <input type="text" class="datepicker form-control md_noborder_right" name="booking-checkin" placeholder="Arrival Date" readonly>
-                </div>
-              </div>
-            </div>
-            <div class="form-group col-md-6 col-sm-6 col-xs-12 nopadding">
-              <div class="input-group">
-                <div class="form_date">
-                  <input type="text" class="datepicker form-control" name="booking-checkout" placeholder="Departure Date" readonly>
-                </div>
-              </div>
-            </div>
-            <button class="button btn_lg btn_blue btn_full"  type="submit">BOOK A ROOM NOW</button>
+            <button class="button btn_lg btn_yellow btn_full" type="submit" style="font-size: 17px">Search</button>
           </form>
         </div>
       </div>
