search http connection done

--- a/frontend/src/app/homepage/homepage.component.html
+++ b/frontend/src/app/homepage/homepage.component.html
@@ -168,7 +168,7 @@
           <form (ngSubmit)="onSearchSubmit()" class="inner">
             <div class="form-group">
               <input style="font-size: 17px; font-weight: bold" class="form-control" name="Destination" placeholder="Try 'Sydney'" type="text"
-                     [(ngModel)]="this.searchInfo.location">
+                     [(ngModel)]="this.searchReq.location">
             </div>
             <button class="button btn_lg btn_yellow btn_full" type="submit" style="font-size: 17px">Search</button>
           </form>
