--- a/frontend/src/app/homepage/homepage.component.html
+++ b/frontend/src/app/homepage/homepage.component.html
@@ -164,7 +164,7 @@
            data-frames='[{"delay":3000,"speed":1500,"frame":"0","from":"y:[100%];z:0;rX:0deg;rY:0;rZ:0;sX:1;sY:1;skX:0;skY:0;opacity:0;","mask":"x:0px;y:[100%];s:inherit;e:inherit;","to":"o:1;","ease":"Power2.easeInOut"}]'
            style="z-index: 99;">
         <!-- ========== BOOKING FORM ========== -->
-        <div style="width: 80%" class="vbf">
+        <div style="width: 80%;margin-top: 60px" class="vbf">
           <form (ngSubmit)="onSearchSubmit()" class="inner">
             <div class="form-group">
               <input style="font-size: 17px; font-weight: bold" class="form-control" name="Destination" placeholder="Try 'Sydney'" type="text"
