change new UI of hotel management

--- a/frontend/src/app/profile/profile.component.html
+++ b/frontend/src/app/profile/profile.component.html
@@ -195,7 +195,8 @@
 
           <!-- This div is for the host's hotel -->
           <div class="layui-tab-item" style="margin-left:0px;margin-top: 20px;margin-right: 20px" style="width: 1000px">
-            <table class="layui-hide" id="hotels" lay-filter="hotels"></table>
+            <app-listingman></app-listingman>
+<!--            <table class="layui-hide" id="hotels" lay-filter="hotels"></table>-->
           </div>
 
         </div>
