--- a/frontend/src/app/booking-com-recommendation/booking-com-recommendation.component.html
+++ b/frontend/src/app/booking-com-recommendation/booking-com-recommendation.component.html
@@ -1,2 +1,18 @@
-<h3>Booking.com Top Hotel Recommendations on {{this.today}}</h3>
 
+<div  id="mapsidebar" style=" align-items: end;overflow: auto; height: 600px; width: 520px;" >
+  <p style="color:gray;  margin-bottom: 16px; margin-left: 17px;font-size: 17px;font-family: Arial">Booking.com Top Hotel Recommendations on {{this.today}}</p>
+  <!--  {{this.displayHotelsInfo.length}}-->
+    <ul *ngFor="let displayHotel of this.allHotelsInfo" style="margin-left: 7px;margin-right: 7px">
+      <li>
+        <div  class="card bg-light mb-3" style="cursor: pointer;margin-bottom: 16px;">
+          <div class="card-body">
+            <!--          <a href="/homepage"><h5 class="card-title" style="color: black">-->
+            {{ displayHotel.name }}
+            &nbsp; <p class="fa fa-map-marker" aria-hidden="true"></p>
+            <!--          </h5></a>-->
+            <p class="card-text">{{ displayHotel.address }}</p>
+          </div>
+        </div>
+      </li>
+    </ul>
+  </div>
