--- a/frontend/src/app/page-not-found/page-not-found.component.html
+++ b/frontend/src/app/page-not-found/page-not-found.component.html
@@ -1,1 +1,6 @@
-<h1>Page Not Found</h1>
+<app-top-navigation></app-top-navigation>
+<br>
+<br>
+<h1 style="text-align: center;font-family: Arial;color: black">Oops...404 Page Not Found</h1>
+<br>
+<br>
