--- a/frontend/src/app/search-result/search-result.component.html
+++ b/frontend/src/app/search-result/search-result.component.html
@@ -44,7 +44,7 @@
         <div class="col-lg-8 col-md-7 col-sm-12">
           <div class="room_details">
             <div class="col-md-9 col-sm-9 col-xs-12 room_desc">
-              <h3><a href="/rooms/{{s.hotel_id}}" target="_blank" style="font-family: Arial"><b>{{s.hotel_name}}</b></a></h3>
+              <h3><a href="/comments/{{s.hotel_id}}" target="_blank" style="font-family: Arial"><b>{{s.hotel_name}}</b>&nbsp;<i class="fa fa-external-link" aria-hidden="true"></i></a></h3>
               <br><p style="font-size: 17px; display: inline"><b>Rating: </b></p><div *ngFor="let rate of counter(s.rating)" style="display: inline">
                 <i class="fa fa-star" aria-hidden="true"></i>&nbsp;
               </div>
