--- a/frontend/src/app/comments/comments.component.html
+++ b/frontend/src/app/comments/comments.component.html
@@ -15,7 +15,7 @@
 
 <form [formGroup]="myForm" style="width: 900px;margin-left: 17%">
   <div class="example-wrapper">
-    <kendo-editor formControlName="editor" style="height: 350px;"></kendo-editor>
+<!--    <kendo-editor formControlName="editor" style="height: 350px;"></kendo-editor>-->
     <input type="hidden" formControlName="user">
   </div>
   <br>
