--- a/frontend/src/app/search-result/search-result.component.html
+++ b/frontend/src/app/search-result/search-result.component.html
@@ -54,7 +54,7 @@
             </div>
             <div class="col-md-3 col-sm-3 col-xs-12 room_price" style="height: 242px">
               <div class="room_price_inner">
-                <span class="room_price_number">7000</span>
+                <span class="room_price_number">Min ${{s.min_price}}</span>
                 <small class="upper"> per night </small>
                 <a href="/rooms/{{s.hotel_id}}" target="_blank" class="button  btn_yellow btn_full upper" type="submit">Find Rooms</a>
               </div>
