booking seems done not sure

--- a/frontend/src/app/rooms/rooms.component.html
+++ b/frontend/src/app/rooms/rooms.component.html
@@ -83,7 +83,7 @@
                 </div>
               </div>
               <div *ngIf="filtered">
-                <a href="#" target="_blank" class="button  btn_yellow btn_full upper" type="submit">Book Now</a>
+                <a href="/Booking/{{sh.room_id}}/{{sh.price}}" target="_blank" class="button  btn_yellow btn_full upper" type="submit">Book Now</a>
               </div>
             </div>
           </div>
