--- a/frontend/src/app/booking/booking.component.html
+++ b/frontend/src/app/booking/booking.component.html
@@ -77,7 +77,7 @@
 </form>
 </div>
 </div>
-<div *ngIf="!submitted">
+<div *ngIf="submitted">
   <p style="text-align: center;color: black;font-size: 35px">A comfirmation email has been sent to your email address {{this.bookingInfo.email}}! Please check your inbox.</p>
   <p style="text-align: center;color: black;font-size: 35px">You may close this page</p>
 </div>
