--- a/frontend/src/app/imagesman/imagesman.component.html
+++ b/frontend/src/app/imagesman/imagesman.component.html
@@ -9,11 +9,13 @@
 </div>
 <br>
 <kendo-tabstrip style="margin-left: 20%; margin-right: 20%">
-<!--  <kendo-tabstrip-tab [title]="'Paris'" [selected]="true">-->
-<!--    <ng-template kendoTabContent>-->
-<!--      <img src="../../assets/images/spa.jpg">-->
-<!--    </ng-template>-->
-<!--  </kendo-tabstrip-tab>-->
+<div *ngFor="let img of curHotel.img_url">
+  <kendo-tabstrip-tab [title]="'image'" [selected]="true">
+    <ng-template kendoTabContent>
+      <img src="http://nomoreprojectpls.com/{{img.url}}">
+    </ng-template>
+  </kendo-tabstrip-tab>
+</div>
 </kendo-tabstrip>
 <div *ngIf="noImage" style="margin-left: 20%;margin-right: 20%;margin-top: 2%;color: black;font-size: 19px">No image uploaded.</div>
 <br><br>
