--- a/frontend/src/app/search-result/search-result.component.html
+++ b/frontend/src/app/search-result/search-result.component.html
@@ -36,7 +36,14 @@
           <figure>
             <div class="room_list_slider owl-carousel">
     <!--          <div class="item" *ngFor="let img of res.img_url">-->
+              <div *ngIf="s.img_url.length == 0">
                 <a  class="hover_effect h_link h_blue"><img src = "../../assets/noimage.png" alt="Image"></a>
+              </div>
+              <div *ngIf="s.img_url.length != 0">
+                <div *ngFor="let img of s.img_url">
+                  <a  class="hover_effect h_link h_blue"><img src = "http://nomoreprojectpls.com/{{img.url}}" alt="Image"></a>
+                </div>
+              </div>
     <!--          </div>-->
             </div>
           </figure>
