--- a/frontend/src/app/comments/comments.component.html
+++ b/frontend/src/app/comments/comments.component.html
@@ -11,13 +11,13 @@
 </div>
 <div *ngIf="comments.length === 0" style="color:black;width: 900px;margin-left: 17%;font-size: 17px">NO COMMENTS</div>
 <br>
-<p style="color: black;margin-left: 17%;font-size: 17px;color: orangered">Note: If you resubmit the review, the new comment will replace the older one.</p>
+<p style="color: black;margin-left: 17%;font-size: 17px;color: orangered">Note: Please specify which room you lived in. Also It's better to post some pictures!</p>
 
 <form [formGroup]="myForm" style="width: 900px;margin-left: 17%">
-  <div class="example-wrapper">
-<!--    <kendo-editor formControlName="editor" style="height: 350px;"></kendo-editor>-->
+<!--  <div class="example-wrapper">-->
+    <angular-editor placeholder="Enter your comment here..." [config]="editorConfig" formControlName="editor" style="height: 600px;"></angular-editor>
     <input type="hidden" formControlName="user">
-  </div>
+<!--  </div>-->
   <br>
   <button type="submit" class="button btn_yellow btn_lg" (click)="onSubmitComment()">Submit</button>
 </form>
