--- a/frontend/src/app/search-result/search-result.component.html
+++ b/frontend/src/app/search-result/search-result.component.html
@@ -41,7 +41,7 @@
               </div>
               <div *ngIf="s.img_url.length != 0">
                 <div *ngFor="let img of s.img_url">
-                  <a  class="hover_effect h_link h_blue"><img src = "http://nomoreprojectpls.com/{{img.url}}" alt="Image"></a>
+                  <a  class="hover_effect h_link h_blue"><img src = "http://localhost:9000/{{img.url}}" alt="Image"></a>
                 </div>
               </div>
     <!--          </div>-->
